--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,5 +1,7 @@
-dataSource.url=jdbc:mysql://localhost:3306/mall_tiny?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+dataSource.url=jdbc:mysql://117.72.91.15:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 dataSource.driverName=com.mysql.cj.jdbc.Driver
-dataSource.username=root
-dataSource.password=root
+dataSource.username=reader
+dataSource.password=123456
 package.base=com.macro.mall.tiny.modules
+spring.redis.host=localhost
+spring.redis.port=6379
